5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1582_1326.log
== TEST (2019-03-12 17:36:55) 
-- CODE:
print("85")
-- OUTPUT:
85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:37:07) 
-- CODE:
print(75")
-- ERROR:
File "XXXX", line 1
    print(75")
             ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:39:26) 
-- CODE:
print("40+35")
-- OUTPUT:
40+35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:39:28) 
-- CODE:
print("40+35")
-- EXECUTION TIME:
0.158167
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
40+35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:39:41) 
-- CODE:
print("40+35")
-- EXECUTION TIME:
0.153068
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
40+35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:39:42) 
-- CODE:
print("40+35")
-- EXECUTION TIME:
0.109246
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
40+35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:39:42) 
-- CODE:
print("40+35")
-- EXECUTION TIME:
0.210412
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
40+35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:39:43) 
-- CODE:
print("40+35")
-- EXECUTION TIME:
0.126132
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
40+35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:39:43) 
-- CODE:
print("40+35")
-- EXECUTION TIME:
0.162969
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
40+35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:39:44) 
-- CODE:
print("40+35")
-- OUTPUT:
40+35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:39:48) 
-- CODE:
print("40+35")
-- EXECUTION TIME:
0.133647
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
40+35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:39:57) 
-- CODE:
print(40+35)
-- EXECUTION TIME:
0.137086
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
